--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -8,6 +8,8 @@ services:
       - COOKIE_SECRET=$COOKIE_SECRET
       - SPOTIFY_CLIENT_ID=$SPOTIFY_CLIENT_ID
       - SPOTIFY_CLIENT_SECRET=$SPOTIFY_CLIENT_SECRET
+      - DISCORD_CLIENT_ID=$DISCORD_CLIENT_ID
+      - DISCORD_CLIENT_SECRET=$DISCORD_CLIENT_SECRET
     image: discord-musicbot:latest
     container_name: discord-musicbot
     restart: unless-stopped
